--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -21,8 +21,18 @@ linter:
   # `// ignore_for_file: name_of_lint` syntax on the line or in the file
   # producing the lint.
   rules:
-    # avoid_print: false  # Uncomment to disable the `avoid_print` rule
-    # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
+    # Disable some strict lints for better development experience
+    prefer_const_constructors: false
+    prefer_const_literals_to_create_immutables: false
+    prefer_const_declarations: false
+    use_key_in_widget_constructors: false
+    library_private_types_in_public_api: false
+    sized_box_for_whitespace: false
+    prefer_is_empty: false
+    # Enable additional helpful lints
+    avoid_print: true
+    avoid_unnecessary_containers: true
+    avoid_web_libraries_in_flutter: true
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
